# simplify-path

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/simplify_path/: main.py
